--- a/index.css
+++ b/index.css
@@ -55,10 +55,15 @@ p{
     background-color: var(--bauyellow);
     grid-template-columns: repeat(8,1fr);
     grid-template-rows: repeat(4, 1fr);
+    overflow: hidden;
 }
-
+.grid-item{
+    overflow: hidden;
+    position: relative;
+}
 .grid-cell{
     border: 1px solid black;
+    overflow: hidden;
 }
 .kill-cell{
     color: var(--baured);
@@ -68,7 +73,6 @@ p{
 }
 .name-title{
     grid-area: 1/4/2/span 2;
-    text-align: center;
     background-color: var(--bauyellow);
 }
 .based-city{
@@ -88,6 +92,26 @@ p{
 .half-alive{
     display: none;
 }
+
+/*--------------------- ANIMATION------------------------ */
+
+
+.greet, .based{
+    position: absolute;
+}
+.greet, .nickname:not(#raf){
+    visibility: hidden;
+} 
+.nickname{
+    position:static;
+}
+.wrapper{
+    display: flex;
+    align-items: flex-start;
+    margin: 0;
+    padding: 0;
+    position: relative;
+}
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     :root{
@@ -100,11 +124,6 @@ p{
         font-family: 'inter';
         font-size: 1rem;
         line-height: 1.6 rem;
-    }
-    .grid-container {
-        height: 45rem;
-        grid-template-columns: repeat(3,1fr);
-        grid-template-rows: repeat(7, 1fr);
     }
     .big-headline{
         font-size: 2.25rem;
@@ -119,13 +138,30 @@ p{
         line-height: 2rem;
         margin: 0;
     }
-
+    .centered{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .grid-container {
+        height: 45rem;
+        grid-template-columns: repeat(3,1fr);
+        grid-template-rows: repeat(7, 1fr);
+    }
+   
+    .grid-cell{
+        border: 1px solid black;
+        overflow: hidden;
+    }
+    
     .moin-title{
         grid-area: 1/1/2/1;
     }
     .name-title{
         grid-area: 2/2/3/span2;
         text-align: center;
+        background-color: var(--bauyellow);
+
     }
     .based-city{
         grid-area: 1/3/2/4;
@@ -143,14 +179,17 @@ p{
         text-align: center;
         padding: .75rem;
     }
-    .grid-item{
-        display: block;
-    }
-    .kill-cell{
-        display: none;
-    }
+   
     .small-text-block{
         max-width: 1.5rem;
         margin: 0;
     }
+    .kill-cell, #enut {
+        display: none;
+    }
+    .half-alive{
+        display: initial;
+    }
+
+    
   }
