name-title fixed

--- a/index.css
+++ b/index.css
@@ -95,7 +95,6 @@ p{
 
 /*--------------------- ANIMATION------------------------ */
 
-
 .greet, .based{
     position: absolute;
 }
@@ -103,14 +102,14 @@ p{
     visibility: hidden;
 } 
 .nickname{
-    position:static;
+    margin:0 1rem 0 1rem;
 }
 .wrapper{
     display: flex;
-    align-items: flex-start;
-    margin: 0;
+    align-items: center;
+    height: 10rem;
+    width: 50rem;
     padding: 0;
-    position: relative;
 }
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
