--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@ body{
 }
 
 .small-headline{
-    font-size: 1.75rem;
+    font-size: 2rem;
     margin: 0;
 }
 p{
@@ -177,7 +177,7 @@ input[type=range] {
         line-height: 1.6 rem;
     }
     .big-headline{
-        font-size: 2.25rem;
+        font-size: 2rem;
         margin: 0;
     }
     .medium-headline{
@@ -224,8 +224,7 @@ input[type=range] {
         text-align: center;
         padding: .8rem;
         line-break: strict;
-        opacity: 0;
-        background-color: var(--baured);
+        background-color: var(--bauyellow);
     }
     .looking-job{
         grid-area: 6/1/span 2 / span 3;
