--- a/index.css
+++ b/index.css
@@ -42,6 +42,12 @@ p{
     padding: 1rem ;
     width: 100%;
 }
+.disable-select{
+    -webkit-user-select: none;  
+    -moz-user-select: none;    
+    -ms-user-select: none;      
+    user-select: none;
+}
 .centered{
     display: flex;
     justify-content: center;
@@ -104,7 +110,7 @@ p{
 .greet, .nickname:not(#raf){
     visibility: hidden;
 } 
-.wrapper{
+.wrapper-name{
     display: flex;
     align-items: center;
     gap: .75rem;
@@ -117,8 +123,9 @@ p{
 #progressSlider{
     scale: 1.09;
     will-change: transform;
+    position:absolute
 }
-input[type=range] {
+input[type=range]  {
     height: 3rem;
     -webkit-appearance: none;
     width: 100%;
@@ -155,12 +162,28 @@ input[type=range] {
   input[type=range]::-moz-range-thumb {
     height: 2rem;
     width: 2rem;
-    border-radius: 0px;
     background: var(--baured);
     cursor: pointer;
     position: relative;
   }
-
+  .circle-wrapper{
+    display: flex;
+  }
+.wrapper-circle{
+    width: 4rem;
+    display: flex;
+    position: absolute;
+    justify-content: space-evenly;
+    left: 3rem;
+}
+.circle-for-slider{
+    width: 0;
+	height: 0;
+	border-top: 0.5rem solid transparent;
+	border-left: 1rem solid var(--baured);;
+	border-bottom: 0.5rem solid transparent;
+    will-change: transform;
+}
   /* --------------- this is end of slider -------------------------*/
   
 /* Extra small devices (phones, 600px and down) */
@@ -232,10 +255,6 @@ input[type=range] {
         padding: .75rem;
     }
    
-    .small-text-block{
-        max-width: 1.5rem;
-        margin: 0;
-    }
     .kill-cell, #enut {
         display: none;
     }
@@ -244,7 +263,7 @@ input[type=range] {
     }
     
     /* ------------------ animation ----------------------------- */
-    .wrapper{
+    .wrapper-name{
         height: 5.7rem;
     }
   }
