--- a/index.css
+++ b/index.css
@@ -2,14 +2,12 @@
     box-sizing: border-box;
 }
 
-
 :root{
     --darkorange :#F27630;
     --lightorange : #F09629;
     --bauyellow :#F1D030;
     --baured : #F42E3F;
     --baubrown: #F2D79F;
-    font-size: 1.25vw;
     --alpha : 80;
 }
 
@@ -17,7 +15,6 @@ body{
     background-color: var(--bauyellow);
     padding: 0;
     margin: 0;
-    height: 100%;
     width: 100%;
     line-height: 1.2;
 }
@@ -29,7 +26,9 @@ body{
     font-size: 2.5rem;
     margin: 0;
 }
-
+.relative{
+    position: relative;
+}
 .small-headline{
     font-size: 2rem;
     margin: 0;
@@ -56,8 +55,8 @@ p{
 .grid-container{
     display: grid;
     position: relative;
-    height: 40rem;
-    border: 1px solid black;
+    height: 50rem;
+    border: 3px solid black;
     background-color: var(--bauyellow);
     grid-template-columns: repeat(8,1fr);
     grid-template-rows: repeat(4, 1fr);
@@ -68,7 +67,7 @@ p{
     position: relative;
 }
 .grid-cell{
-    border: 1px solid black;
+    border: 3px solid black;
     overflow: hidden;
 }
 .kill-cell{
@@ -82,15 +81,16 @@ p{
     background-color: var(--bauyellow);
 }
 .based-city{
-    grid-area: 4/8/5/9;
+    grid-area: 2/6/3/7; 
     text-align: center;
-    
+}
+.based-img{
+    height: 7rem;
 }
 .is-me{
     grid-area: 3/6/4/span 2 ;
     text-align: center;
-    color: var(--bauyellow);
-    background-color: var(--bauyellow);
+    background-color:var(--bauyellow);
     z-index: 1;
 }
 .looking-job{
@@ -98,8 +98,24 @@ p{
     text-align: center;
     padding: 1.5rem;
 }
+.trigger{
+    width: 100%;
+    height: 100%;
+    font-size: 7rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
 .half-alive{
     display: none;
+}
+.number{
+    margin: 0;
+    text-align: center;
+    user-select: none;
+    cursor: pointer;
+    color: black;
 }
 
 /*--------------------- ANIMATION------------------------ */
@@ -107,91 +123,35 @@ p{
 .greet, .based{
     position: absolute;
 }
-.greet, .nickname:not(#raf){
+.uofc{
     visibility: hidden;
 } 
 .wrapper-name{
     display: flex;
     align-items: center;
     gap: .75rem;
-    height: 10rem;
-    width: 50rem;
+    height: 12rem;
+    width: 70rem;
     padding: 0;
 }
-
-/* --------------- this is slider -------------------------*/
-input[type=range]  {
-    height: 3rem;
-    -webkit-appearance: none;
+.content-cover{
     width: 100%;
-    background-color: black;
-    border: .25rem solid black;
-  }
-  input[type=range]:focus {
-    outline: none;
-  }
-  input[type=range]::-webkit-slider-runnable-track {
-    width: 100%;
-    height: 2.5rem;
-    cursor: pointer;
-    background: var(--bauyellow);
-;
-  }
-  input[type=range]::-webkit-slider-thumb {
-    height: 2rem;
-    width: 2rem;
-    background: var(--baured);
-    cursor: pointer;
-    -webkit-appearance: none;
-    position: relative;
-  }
-  input[type=range]:focus::-webkit-slider-runnable-track {
-    background: var(--bauyellow);
-  }
-  input[type=range]::-moz-range-track {
-    width: 100%;
-    height: 2.5rem;
-    cursor: pointer;
-    background: var(--bauyellow);
-  }
-  input[type=range]::-moz-range-thumb {
-    height: 2rem;
-    width: 2rem;
-    background: var(--baured);
-    cursor: pointer;
-    position: relative;
-  }
-  .circle-wrapper{
-    display: flex;
-  }
-.wrapper-circle{
-    width: 4rem;
-    display: flex;
+    height: 100%;
     position: absolute;
-    justify-content: space-evenly;
-    left: 3.3rem;
+    background-color: var(--lightorange);
+    z-index: 100000;
 }
-.circle-for-slider{
-    width: 0;
-	height: 0;
-	border-top: 0.5rem solid transparent;
-	border-left: 1rem solid var(--bauyellow);
-	border-bottom: 0.5rem solid transparent;
-}
-  /* --------------- this is end of slider -------------------------*/
   
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-    :root{
-        font-size: 4.23vw;
-    }
+
+@media only screen and (max-width: 750px) {
     .home-main{
         padding: .75rem;
     }
     p{
         font-family: 'inter';
         font-size: 1rem;
-        line-height: 1.6 rem;
+        line-height: 1.6rem;
     }
     .big-headline{
         font-size: 2rem;
@@ -206,19 +166,14 @@ input[type=range]  {
         line-height: 2rem;
         margin: 0;
     }
-    .centered{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
     .grid-container {
-        height: 45rem;
+        height: 43rem;
         grid-template-columns: repeat(3,1fr);
         grid-template-rows: repeat(7, 1fr);
     }
    
     .grid-cell{
-        border: 1px solid black;
+        border: 2.5px solid black;
         overflow: hidden;
     }
     
@@ -233,15 +188,17 @@ input[type=range]  {
     }
     .based-city{
         grid-area: 1/3/2/4;
-        text-align: center;
-        
+        text-align: center; 
+    }
+    .based-img{
+        height: 5rem;
     }
     .is-me{
         grid-area: 5/1/6/3 ;
         text-align: center;
         padding: .8rem;
         line-break: strict;
-        background-color: var(--bauyellow);
+        background-color:var(--bauyellow);
     }
     .looking-job{
         grid-area: 6/1/span 2 / span 3;
@@ -259,5 +216,8 @@ input[type=range]  {
     /* ------------------ animation ----------------------------- */
     .wrapper-name{
         height: 5.7rem;
+    }
+    .trigger{
+    font-size: 4rem;
     }
   }
